--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
                 <li><a href="Portfolio.html">PORTFOLIO</a></li>
                 <li><a href="Contact.html">CONTACT</a></li>
             </ul>
-        </di>
+        </div>
     </div>
 </header>
 <body>
